More styling for navbar and overview. Stopped myPage from becoming too small

--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -9,11 +9,15 @@
 body {
   margin: 0;
   padding: 0;
-  /*background-image: url('https://wallpaperaccess.com/full/42546.jpg');*/
-  background-image: url('https://images.unsplash.com/photo-1470217407524-b1e77afc6ec5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1646&q=80');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(33, 33, 33, 0.6),
+      rgb(33, 33, 33, 0.6)
+    ),
+    url('https://images.unsplash.com/photo-1468237464607-fa0a61c36127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1569&q=80');
 }
 
 #app {
@@ -29,7 +33,14 @@ body {
 
 main {
   margin: auto;
-  background-color: white;
   max-width: 80rem;
+  min-width: 80rem;
   flex: 1;
+}
+
+@media screen and(max-width: 1400px) {
+  main {
+    max-width: 65rem;
+    min-width: 65rem;
+  }
 }
